<resources>
    <string name="app_name">Swipe Products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image">Product Image</string>

    <string name="tax">Tax %s%%</string>

    <string name="price">₹ %.1f</string>
    <string name="swipe_products">Swipe Products</string>
    <string name="add_product">Add Product</string>
    <string name="add_image">Add Image</string>
    <string name="product_price">Add Price</string>
    <string name="product_tax">Add Tax Rate</string>
    <string name="product_name">Add Product Name</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="search_hint">Search products</string>
</resources>